# mallow_notifications

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  setup.py
mallow_notifications/base/: celery.py  constants.py  exceptions.py  logger.py  settings.py  utils.py
mallow_notifications/examples/: mailer.py  notification.py
mallow_notifications/mailer/: __init__.py  amazon_ses.py  base.py  log.py  mail_adapter.py  smtp.py
mallow_notifications/sns/: __init__.py  notification.py  notification_adpater.py
mallow_notifications/sns/endpoints/: __init__.py  publish.py  push_notification.py  sms_sanbox.py  subscribe.py  topics.py
mallow_notifications/sns/schema/: base.py  publish.py  push_notification.py  sms_sandbox.py  subscribe.py  topics.py
tests/: conftest.py
tests/unit/: test_utils.py
tests/unit/mailer/: test_amazon_ses.py  test_email_adapter.py  test_log.py  test_smtp.py
tests/unit/sns/: test_notification.py  test_notification_adapter.py
tests/unit/sns/endpoints/: test_publish.py  test_push_notification.py  test_sms_sandbox.py  test_subscribe.py  test_topic.py
