[tool.poetry]
name = "mallow-notifications"
version = "0.1.0"
description = "Python Package us used to send notifications through Emails, SMS and Push Notifications"
authors = ["Poovarasu <poovarasu@mallow-tech.com>"]
readme = "README.md"
packages = [{include = "mallow_notifications"}]

[tool.poetry.dependencies]
python = "3.10.0"
boto3 = "^1.34.39"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
celery = "^5.3.6"
redis = "^5.0.1"
coverage = "^7.4.1"


[tool.poetry.group.dev.dependencies]
faker = "^23.1.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"